tests/parsing/unterminated_octal_bit_string/stderr.golden
error: unterminated octal bit string, probably missing '"'
bus.fbd +2:26
   |
 2 |   c config; init-value = o"1100 ; width = 64
   |                          ^^^^^^
